--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+  "express": "^5.1.0",
+  "socket.io": "^4.8.1",
     "google-auth-library": "^10.2.1",
     "mongodb": "^6.18.0",
     "next-themes": "^0.4.6",
@@ -28,7 +29,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-oauth": "^0.0.1",
-    "react-router-dom": "^7.7.0",
+  "react-router-dom": "^7.7.0",
+  "socket.io-client": "^4.8.1",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
