Fixed game breaking time issue

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "main": "index.html",
   "scripts": {
     "dev": "vite",
+    "dev:server": "node server/index.js",
+    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.22.0",
